# Ai-Trader-Pro

./: docker-compose.yml
.cursor/rules/: rules.mdc
ai-trader-pro/: .env.example  .gitignore  README.md  docker-compose.yml
ai-trader-pro/backend/: Dockerfile.dev  README.md  pyproject.toml
ai-trader-pro/backend/alembic/: env.py
ai-trader-pro/backend/app/: config.py  main.py  models.py
ai-trader-pro/frontend/: Dockerfile.dev  package.json  tailwind.config.js
ai-trader-pro/frontend/src/: App.tsx  index.css
backend/: .coverage  .env  alembic.ini  coverage.xml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20250227_220049_create_tables.py
backend/app/: config.py  database.py  main.py  models.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  trading.py  users.py  websocket.py
backend/app/core/: deps.py  security.py
backend/app/crud/: __init__.py  base.py  trading.py  user.py
backend/app/schemas/: __init__.py  auth.py  trading.py  user.py
backend/app/services/: ai_trading.py  trading.py  websocket.py
backend/scripts/: create_db.py  create_superuser.py  create_test_db.py  init_db.py
backend/tests/: conftest.py
backend/tests/api/: test_websocket.py
backend/tests/api/v1/: test_auth.py  test_trading.py  test_users.py
backend/tests/services/: test_ai_trading.py  test_trading.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: MarketDataDisplay.tsx  OrderForm.tsx  PortfolioManager.tsx  TradingDashboard.tsx  TradingInterface.tsx
frontend/src/contexts/: MarketDataContext.tsx
frontend/src/hooks/: useWebSocket.ts
